# my-cursor-workshop

./: .gitignore  .mcp-playwright-config.json  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  LICENSE  README.md  package.json  pyproject.toml
.cursor/: mcp.json
.cursor/prompts/: task-breakdown.md
.cursor/rules/: api-development.mdc  code-quality-enforcement.mdc  development-workflow.mdc  git-workflow.mdc  pep8-enforcement.mdc  python-structure.mdc  testing.mdc
.github/: pull-request-template.md
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: e2e-tests.yml
api/: README.md  main.py  models.py  storage.py
docs/: cloud-run-mcp-setup.md  context7-mcp-setup.md  cursor-ai-troubleshooting.md  cursor-workshop-handson.md  handson-web-spec.md  mcp-setup.md  requirements.md  ui-design.md
handson-web/: README.md  index.html
tests/: context.py  test_fastapi_template.py  test_placeholder.py
tests/api/: test_main.py  test_storage.py  test_template.py
tests/ui/: test_e2e_product_journey.py
ui/: README.md  main.py
